# agent-vault

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  agent-vault-prd.md
.github/workflows/: ci.yml  release.yml
Formula/: agent-vault.rb
examples/: README.md
node-sdk/: README.md  package-lock.json  package.json
node-sdk/src/: errors.ts  index.ts  manifest.ts  metadata.ts  vault.ts
python-sdk/: README.md  pyproject.toml
python-sdk/src/agent_vault/: __init__.py  crypto.py  errors.py  manifest.py  mcp_server.py  metadata.py  vault.py
python-sdk/tests/: test_vault.py
src/: error.rs  main.rs
src/cli/: access.rs  agent.rs  check.rs  init.rs  mod.rs  recovery.rs  secret.rs
src/core/: config.rs  crypto.rs  git.rs  keys.rs  manifest.rs  metadata.rs  mod.rs  paths.rs  vault.rs
tests/: cli.rs  integration.rs
