[package]
name = "agent-vault"
version = "0.1.0"
edition = "2021"
description = "Zero-trust credential manager for AI agents"
license = "MIT"
repository = "https://github.com/ewimsatt/agent-vault"
homepage = "https://github.com/ewimsatt/agent-vault"
keywords = ["security", "encryption", "credentials", "ai-agents", "age"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[[bin]]
name = "agent-vault"
path = "src/main.rs"

[dependencies]
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
git2 = "0.19"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
