[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vault"
version = "0.1.0"
description = "Zero-trust credential manager for AI agents — Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "agent-vault contributors"}]
keywords = ["security", "encryption", "credentials", "ai-agents", "age", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/ewimsatt/agent-vault"
Repository = "https://github.com/ewimsatt/agent-vault"
Issues = "https://github.com/ewimsatt/agent-vault/issues"

dependencies = [
    "pyrage>=1.2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agent-vault-mcp = "agent_vault.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
